Fix room header timeline and composer alignment
Room header use DecoratedRoomAvatar instead of manual e2eIcon overlay
move e2eIcon next to it instead of private padlock

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -330,9 +330,9 @@ $left-gutter: 64px;
 .mx_EventTile_e2eIcon {
     position: absolute;
     top: 6px;
-    left: 46px;
-    width: 15px;
-    height: 15px;
+    left: 44px;
+    width: 14px;
+    height: 14px;
     display: block;
     bottom: 0;
     right: 0;
@@ -397,10 +397,6 @@ $left-gutter: 64px;
 
 .mx_EventTile_keyRequestInfo_tooltip_contents p:last-child {
     margin-bottom: 0px;
-}
-
-.mx_EventTile_12hr .mx_EventTile_e2eIcon {
-    padding-left: 5px;
 }
 
 .mx_EventTile:hover.mx_EventTile_verified .mx_EventTile_line,
@@ -507,7 +503,7 @@ $left-gutter: 64px;
     display: inline-block;
     visibility: hidden;
     cursor: pointer;
-    top: 6px;
+    top: 8px;
     right: 6px;
     width: 19px;
     height: 19px;
